[metadata]
name = cli_command_parser
version = attr: cli_command_parser.__version__.__version__
description = CLI Command Parser
url = https://github.com/dskrypa/cli_command_parser
project_urls =
    Source = https://github.com/dskrypa/cli_command_parser
license = Apache 2.0
license_files = LICENSE
long_description = file: readme.rst
long_description_content_type = text/x-rst
author = Doug Skrypa
author_email = dskrypa@gmail.com
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: User Interfaces
    Topic :: Text Processing


[options]
include_package_data = True
packages = find:
package_dir = = lib
python_requires = >=3.7
tests_require = testtools; coverage

[options.packages.find]
where = lib

[options.extras_require]
wcwidth = wcwidth
conversion = astunparse;python_version<'3.9'
